--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   percent_indicator: ^4.2.3
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.3
+  formz: ^0.6.1
 
 dev_dependencies:
   flutter_test:
