--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.3
   formz: ^0.6.1
+  easy_autocomplete: ^1.6.0
 
 dev_dependencies:
   flutter_test:
