--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.3
   formz: ^0.6.1
   easy_autocomplete: ^1.6.0
+  countries_utils: ^1.0.1
 
 dev_dependencies:
   flutter_test:
